First version with the updated program model